# MorpheusRenderer

./: .gitignore  CMakeLists.txt
assets/scenes/: test_scene.json
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  InputManager.cpp  InputManager.h
src/math/: Common.h  Matrix.h  Quaternion.h  Vector.h
src/renderer/: Clipping.cpp  Clipping.h  Framebuffer.cpp  Framebuffer.h  IShader.h  Material.h  Mesh.cpp  Mesh.h  RenderState.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Vertex.h
src/renderer/shaders/: BlinnPhongShader.cpp  BlinnPhongShader.h  ShadowMapShader.cpp  ShadowMapShader.h  UnlitShader.cpp  UnlitShader.h
src/scene/: Camera.cpp  Camera.h  Light.h  Scene.cpp  Scene.h  SceneObject.h
